Trac 568 - Fix for logo partners on mobile

--- a/src/app/home/home.less
+++ b/src/app/home/home.less
@@ -269,6 +269,14 @@
             width: 100%;
             max-height: 160px;
 
+            @media (min-width: 480px) {
+                padding-top: 35px;
+            }
+
+            @media (min-width: 640px) {
+                padding-top: 15px;
+            }
+
             @media (min-width: @screen-sm-min) {
                 width: auto;
                 max-height: inherit;
